--- a/ubiquity/chrome/content/editor.html
+++ b/ubiquity/chrome/content/editor.html
@@ -99,27 +99,30 @@
   <a href="http://wiki.mozilla.org/Labs/Ubiquity">Ubiquity Wiki</a>.</p> 
 </div>
 
-<br clear="all"/>
 <div id="editor-actions">
-  <div id="save-as-div" class="col-three">
-    <a class="button" href="javascript:void(saveAs())"><span>Save to file</span></a>
-  </div>
-  
-  <div id="import-template-div" class="col-three">
-    <a class="button" href="javascript:void(importTemplate())"><span>Import Command Template</span></a>
-  </div>
+  <ul class="button-list">
+    <li>
+      <a class="button" href="javascript:void(importTemplate())"><b>Import Command Template</b></a>
+    </li>
+    <li>
+      <a class="button" href="javascript:void(launch())"><b>Launch an external editor</b></a>
+    </li>
+    <li>
+      <a class="button"href="javascript:void(paste())"><b>Share</b></a>
+    </li>
+    <li>
+      <a class="button" href="javascript:void(saveAs())"><b>Save to file</b></a>
+    </li>
+  </ul>
+</div>
 
-  <div id="external-editor-div" class="col-three">
-    <a class="button" href="javascript:void(launch())"><span>Launch an external editor</span></a>
-    <br/><br/>Your editor is
-    <input id="editorInputBox" type="file" size="20" 
-           style="cursor:pointer" 
-           onchange="Editor.onSave()"/>
-  </div>
+<br clear="all"/><br/>
 
-  <div id="paste-as-div" class="col-two">
-    <a class="button"href="javascript:void(paste())"><span>Share</span></a>
-  </div>
+<div id="external-editor-pref">
+  Your external editor is
+  <input id="editorInputBox" type="file" size="20" 
+         style="cursor:pointer" 
+         onchange="Editor.onSave()"/>
 </div>
 
 <div id="editor-div">
