--- a/ubiquity/chrome/content/test.html
+++ b/ubiquity/chrome/content/test.html
@@ -7,9 +7,9 @@
 <script type="text/javascript;version=1.7" src="linkrel_codesource.js"></script>
 <script type="text/javascript;version=1.7" src="cmdutils.js"></script>
 <script type="text/javascript;version=1.7" src="suggestion_memory.js"></script> 
-<script type="text/javascript;version=1.7" src="nlparser/parsersettings.js"></script>
-<script type="text/javascript;version=1.7" src="nlparser/en/verbtypes.js"></script>
-<script type="text/javascript;version=1.7" src="nlparser/en/parser.js"></script>
+<script type="text/javascript;version=1.7" src="nlparser/en/parser_plugin.js"></script>
+<script type="text/javascript;version=1.7" src="nlparser/parser.js"></script>
+<script type="text/javascript;version=1.7" src="nlparser/verbtypes.js"></script>
 <script type="text/javascript;version=1.7" src="sandboxfactory.js"></script>
 <script type="text/javascript;version=1.7" src="cmdmanager.js"></script>
 <script type="text/javascript;version=1.7" src="tests.js"></script>
