Moved Japanese parser over to using new style of plugins, combined its tests into main test suite, made them pass.

--- a/ubiquity/chrome/content/test.html
+++ b/ubiquity/chrome/content/test.html
@@ -8,6 +8,7 @@
 <script type="text/javascript;version=1.7" src="cmdutils.js"></script>
 <script type="text/javascript;version=1.7" src="suggestion_memory.js"></script> 
 <script type="text/javascript;version=1.7" src="nlparser/en/parser_plugin.js"></script>
+<script type="text/javascript;version=1.7" src="nlparser/jp/parser_plugin.js"></script>
 <script type="text/javascript;version=1.7" src="nlparser/parser.js"></script>
 <script type="text/javascript;version=1.7" src="nlparser/verbtypes.js"></script>
 <script type="text/javascript;version=1.7" src="sandboxfactory.js"></script>
