--- a/ubiquity/standard-feeds/map.html
+++ b/ubiquity/standard-feeds/map.html
@@ -3,7 +3,7 @@
       xmlns:xul="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul">
 <head>
   <title>Ubiquity Mapping Commands</title>
-  <link rel="commands" href="map.xhtml"/>
+  <link rel="commands" href="map.js"/>
 </head>
 <body>
 <p>This feed contains mapping commands.</p>
