Renamed jquery-1.2.3.min.js to jquery.min.js, so that we can easily upgrade to new versions of jquery in the future w/o having to change files that depend on it.
--HG--
rename : ubiquity/scripts/jquery-1.2.3.min.js => ubiquity/scripts/jquery.min.js

--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="chrome://ubiquity/skin/icons/favicon.ico" type="image/x-icon" />
   <script type="text/javascript" src="prefkeys.js"></script>
   <script type="text/javascript"
-          src="resource://ubiquity-scripts/jquery-1.2.3.min.js"></script>
+          src="resource://ubiquity-scripts/jquery.min.js"></script>
   
   <title>About Ubiquity</title>
 </head>
