--- a/ubiquity/chrome/content/test.html
+++ b/ubiquity/chrome/content/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html><head>
 <title>Ubiquity Test Suite</title>
-<script src="resource://ubiquity-scripts/jquery-1.2.3.min.js"></script>
+<script src="resource://ubiquity-scripts/jquery.min.js"></script>
 <script type="text/javascript;version=1.7" src="utils.js"></script>
 <script type="text/javascript;version=1.7" src="codesource.js"></script>
 <script type="text/javascript;version=1.7" src="linkrel_codesource.js"></script>
