--- a/ubiquity/chrome/content/editor.html
+++ b/ubiquity/chrome/content/editor.html
@@ -11,7 +11,7 @@
   <script type="application/javascript;version=1.7"
           src="linkrel_codesource.js"></script>
   <script type="text/javascript"
-          src="resource://ubiquity-scripts/jquery-1.2.3.min.js"></script>
+          src="resource://ubiquity-scripts/jquery.min.js"></script>
   <script type="application/javascript;version=1.7"
           src="editor.js"></script>
   <script type="application/javascript;version=1.7"
