Moved to a non-minified version of jQuery since it's always loaded locally, and upgraded to jQuery 1.2.6, which resolves #312.

--- a/ubiquity/chrome/content/cmdlist.html
+++ b/ubiquity/chrome/content/cmdlist.html
@@ -9,7 +9,7 @@
   <title>Ubiquity Commands</title>
 </head>
 <body>
-<script src="resource://ubiquity-scripts/jquery.min.js"></script>
+<script src="resource://ubiquity-scripts/jquery.js"></script>
 <script src="template.js"></script>
 <script type="application/javascript;version=1.7"
         src="utils.js"></script>
