--- a/ubiquity/chrome/content/skinlist.html
+++ b/ubiquity/chrome/content/skinlist.html
@@ -9,7 +9,7 @@
   <title>Ubiquity Skins</title>
 </head>
 <body>
-<script src="resource://ubiquity-scripts/jquery.min.js"></script>
+<script src="resource://ubiquity-scripts/jquery.js"></script>
 <script src="skinlist.js"></script>
 <script src="cmdlist.js"></script>
 <script src="utils.js"></script>
