--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="chrome://ubiquity/skin/icons/favicon.ico" type="image/x-icon" />
   <script type="text/javascript" src="prefkeys.js"></script>
   <script type="text/javascript"
-          src="resource://ubiquity-scripts/jquery.min.js"></script>
+          src="resource://ubiquity-scripts/jquery.js"></script>
   
   <title>About Ubiquity</title>
 </head>
