--- a/ubiquity/chrome/content/confirm-add-command.html
+++ b/ubiquity/chrome/content/confirm-add-command.html
@@ -96,7 +96,7 @@
       </div>
     </div>
   </body>
-  <script src="resource://ubiquity-scripts/jquery.min.js"></script>
+  <script src="resource://ubiquity-scripts/jquery.js"></script>
   <script type="application/javascript;version=1.7"
           src="utils.js"></script>
   <script type="application/javascript;version=1.7"
