applied FreakCERS patch for #319

--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -8,6 +8,8 @@
         href="web-content.css" />
   <link rel="shortcut icon" href="chrome://ubiquity/skin/icons/favicon.ico" type="image/x-icon" />
   <script type="text/javascript" src="prefkeys.js"></script>
+  <script type="text/javascript" 
+          src="resource://ubiquity-scripts/jsparser.js"></script>
   <script type="text/javascript"
           src="resource://ubiquity-scripts/jquery.js"></script>
   
