--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -106,18 +106,12 @@ extension.
 
 
 <div class="col-four">
-  <h2 class="top">Ubiquity 0.1.1 Released!</h2>
+  <h2 class="top">Ubiquity 0.1.2 Released!</h2>
 
-  <p>We've just released the first patch for Ubiquity, which fixes a
-  lot of bugs and offers a few new features.  Feel free to check out the <a
-  href="https://wiki.mozilla.org/Labs/Ubiquity/Ubiquity_0.1.1_Release_Notes">release
+  <p>We've just released the second patch for Ubiquity, which fixes a
+  lot of bugs and offers new features.  Feel free to check out the <a
+  href="https://wiki.mozilla.org/Labs/Ubiquity/Ubiquity_0.1.2_Release_Notes_(Raging_Stream)">release
   notes</a> for more information.</p>
-
-  <p>One caveat, though: the latest version may break your current
-  subscriptions, and you may have to unsubscribe from them and then
-  resubscribe to them to get them to work again.  Sorry for the
-  inconvenience, and thanks for participating in this Mozilla Labs
-  experiment.</p>
 
   <h2 class="top">Introduction Movie</h2>
 
