--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -141,6 +141,8 @@ extension.
 <script type="application/javascript;version=1.7"
         src="utils.js"></script>
 <script type="application/javascript;version=1.7"
+        src="codesource.js"></script>
+<script type="application/javascript;version=1.7"
         src="linkrel_codesource.js"></script>
 <script type="application/javascript;version=1.7"
         src="chrome://ubiquity/content/about.js"></script>
