The suggestion memory unit tests now work fine when run in-browser, but some of what I've added are unnecessary hacks to enforce that DB connections are managed properly.  I've put TODO statements in relevant places where these need to be fixed.

--- a/ubiquity/chrome/content/test.html
+++ b/ubiquity/chrome/content/test.html
@@ -12,6 +12,7 @@
 <script type="text/javascript;version=1.7" src="nlparser/verbtypes.js"></script>
 <script type="text/javascript;version=1.7" src="sandboxfactory.js"></script>
 <script type="text/javascript;version=1.7" src="cmdmanager.js"></script>
+<script type="text/javascript;version=1.7" src="test_suggestion_memory.js"></script>
 <script type="text/javascript;version=1.7" src="tests.js"></script>
 <script type="text/javascript;version=1.7" src="test.js"></script>
 <script type="text/javascript;version=1.7">
