The google search command no longer displays a 'fetching results' status message because it's almost always replaced by the actual results before the end-user has time to read the message, which ends up just confusing people.  In the future we can add a throbber while stuff is being fetched.

--- a/ubiquity/standard-feeds/search.xhtml
+++ b/ubiquity/standard-feeds/search.xhtml
@@ -209,9 +209,12 @@ CmdUtils.makeSearchCommand({
   description: "Searches Google for your words.",
   preview: function(pblock, directObject) {
     var searchTerm = directObject.text;
-    var pTemplate = "Searches Google for <b>${query}</b>";
-    var pData = {query: searchTerm};
-    pblock.innerHTML = CmdUtils.renderTemplate(pTemplate, pData);
+    // Don't even display any text before fetching search results,
+    // since the results come back nearly instantaneously. In the
+    // future, we can display a throbber.
+    //var pTemplate = "Searches Google for <b>${query}</b>";
+    //var pData = {query: searchTerm};
+    //pblock.innerHTML = CmdUtils.renderTemplate(pTemplate, pData);
 
     var url = "http://ajax.googleapis.com/ajax/services/search/web";
     var params = { v: "1.0", q: searchTerm };
