--- a/ubiquity/standard-feeds/search.xhtml
+++ b/ubiquity/standard-feeds/search.xhtml
@@ -400,7 +400,7 @@ CmdUtils.makeSearchCommand({
 
     jQuery.get( url, params, function(data) {
       pblock.innerHTML = CmdUtils.renderTemplate(
-        jquery("#yahoo-search", feed.dom).html(),
+        jQuery("#yahoo-search", feed.dom).html(),
         {results:data.ResultSet.Result}
       );
     }, "json");
