Added a link to the credits page on about:ubiquity (#105) and updated the tutorial link to point to the latest version tutorial.

--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -30,7 +30,7 @@
     <li><a href="chrome://ubiquity/content/cmdlist.html">Your Commands</a></li>
     <li><a href="chrome://ubiquity/content/editor.html">Command Editor</a></li>
     <!-- <li><a href="chrome://ubiquity/content/skinlist.html">Your Skins</a></li> -->
-    <li><a href="https://wiki.mozilla.org/Labs/Ubiquity/Ubiquity_0.1_User_Tutorial">Tutorial</a></li>
+    <li><a href="https://wiki.mozilla.org/Labs/Ubiquity/Latest_Ubiquity_User_Tutorial">Tutorial</a></li>
     <li><a href="https://labs.toolness.com/ubiquity-herd/">Find New Commands</a></li>
   </ul>  
 </div>
@@ -59,7 +59,7 @@ extension.
 <div class="col-five">
   <h2 class="top">Users</h2>
 
-  <p><strong>Take</strong> the <a href="https://wiki.mozilla.org/Labs/Ubiquity/Ubiquity_0.1_User_Tutorial">Ubiquity tutorial</a> to master the basics.</p>
+  <p><strong>Take</strong> the <a href="https://wiki.mozilla.org/Labs/Ubiquity/Latest_Ubiquity_User_Tutorial">Ubiquity tutorial</a> to master the basics.</p>
 
   <p><strong>Help us</strong>. Subscribe to the <a href="https://labs.toolness.com/ubiquity-herd/command-feed/">Herd</a>, which will add your data to the <a href="https://labs.toolness.com/ubiquity-herd">dashboard</a></a>&mdash;it's completely anonymous and will help us make Ubiquity better and safer.</p>
     
@@ -112,6 +112,8 @@ extension.
   lot of bugs and offers new features.  Feel free to check out the <a
   href="https://wiki.mozilla.org/Labs/Ubiquity/Ubiquity_0.1.2_Release_Notes_(Raging_Stream)">release
   notes</a> for more information.</p>
+
+	<p> Ubiquity is a team effort by contributors from all over the world. For a list of some of the contributors, check out the <a href="https://wiki.mozilla.org/Labs/Ubiquity/Credits">credits</a> page.
 
   <h2 class="top">Introduction Movie</h2>
 
