--- a/ubiquity/standard-feeds/search.xhtml
+++ b/ubiquity/standard-feeds/search.xhtml
@@ -12,7 +12,7 @@ corresponding feed is <a href="search.html">here</a>.</p>
 {for result in results}
 <div class="gresult">
   <div>
-    <a href="${result.unescapedUrl}">${result.title}</a>
+    ${result.key}: <a href="${result.unescapedUrl}" accesskey="${result.key}">${result.title}</a>
   </div>
   <xul:description class="gresult-content">${result.content}</xul:description>
   <div class="gresult-url">${result.visibleUrl}</div>
@@ -20,6 +20,7 @@ corresponding feed is <a href="search.html">here</a>.</p>
 {forelse}
   <b>Your search - ${searchTerm} - did not match any documents. </b>
 {/for}
+<small>Tip: You can go to any result in this preview by using its number as an access key. (Linux and Windows: alt-number, Mac: control-number)</small>
 </div>
 <div id="amazon-search" style="display: none;">
 Found ${numitems} books on Amazon matching <b>${query}</b>
@@ -202,6 +203,7 @@ CmdUtils.CreateCommand({
   }
 });
 
+
 CmdUtils.makeSearchCommand({
   name: "Google",
   url: "http://www.google.com/search?q={QUERY}",
@@ -222,7 +224,13 @@ CmdUtils.makeSearchCommand({
     CmdUtils.previewGet( pblock, url, params, function(data) {
       var numToDisplay = 3;
       var results = data.responseData.results.splice( 0, numToDisplay );
-
+      
+      //for access keys
+      for(var i=0;i<results.length;i++){
+        var result = results[i];
+        result.key = i+1;
+      }
+      
       pblock.innerHTML = CmdUtils.renderTemplate( jQuery("#google-search", feed.dom).html(),
 						  {results:results, searchTerm:searchTerm}
 						);
