--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -93,6 +93,10 @@ extension.
   
   <p>Run the <a href="test.html">unit tests</a>.</p>
 
+  <p>Help us test our 
+    <a href="chrome://ubiquity/content/experimental-commands.html">
+     experimental commands</a>!</p>
+
   <div id="command-feed-graveyard-div">
     <h2>Feed Graveyard</h2>
     <p>
