Moved template.js into the scripts directory.
--HG--
rename : ubiquity/chrome/content/template.js => ubiquity/scripts/template.js

--- a/ubiquity/chrome/content/cmdlist.html
+++ b/ubiquity/chrome/content/cmdlist.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <script src="resource://ubiquity-scripts/jquery.js"></script>
-<script src="template.js"></script>
+<script src="resource://ubiquity-scripts/template.js"></script>
 <script type="application/javascript;version=1.7"
         src="codesource.js"></script>
 <script type="application/javascript;version=1.7"
