--- a/ubiquity/chrome/content/cmdlist.html
+++ b/ubiquity/chrome/content/cmdlist.html
@@ -15,14 +15,18 @@
         src="codesource.js"></script>
 <script type="application/javascript;version=1.7"
         src="linkrel_codesource.js"></script>
-<script src="prefcommands.js"></script>
+<script type="application/javascript;version=1.7"
+        src="prefcommands.js"></script>
 <script type="application/javascript;version=1.7"
         src="cmdmanager.js"></script>
-<script src="msgservice.js"></script>
-<script src="sandboxfactory.js"></script>
+<script type="application/javascript;version=1.7"
+        src="msgservice.js"></script>
+<script type="application/javascript;version=1.7"
+        src="sandboxfactory.js"></script>
 <script type="application/javascript;version=1.7"
         src="builtinfactories.js"></script>
-<script src="cmdlist.js"></script>
+<script type="application/javascript;version=1.7"
+        src="cmdlist.js"></script>
 
 <div class="head">
   <span class="large">Ubiquity:</span> Your command list</span>
