Made cmdutils.js into a JS module, although it's sort of weird as one since most of the functions are expectd to run in the context of a command feed; we may want to separate out the functions that are applicable to not just command feeds into a different file.
--HG--
rename : ubiquity/chrome/content/cmdutils.js => ubiquity/modules/cmdutils.js

--- a/ubiquity/chrome/content/editor.html
+++ b/ubiquity/chrome/content/editor.html
@@ -103,7 +103,7 @@
 
 <div class="col-three">
   <p><strong>Read the <a href="https://wiki.mozilla.org/Labs/Ubiquity/Ubiquity_0.1_Author_Tutorial">command authoring tutorial</a></strong> to learn more. For examples of built-in commands, look <a href="chrome://ubiquity/content/builtincmds.js">here</a>,
-    for information on available utility functions for use in commands, look <a href="chrome://ubiquity/content/cmdutils.js">here</a>.</p>
+    for information on available utility functions for use in commands, look <a href="resource://ubiquity-modules/cmdutils.js">here</a>.</p>
 </div>
 
 <div class="col-two">
