--- a/ubiquity/standard-feeds/search.xhtml
+++ b/ubiquity/standard-feeds/search.xhtml
@@ -214,9 +214,10 @@ CmdUtils.makeSearchCommand({
     // Don't even display any text before fetching search results,
     // since the results come back nearly instantaneously. In the
     // future, we can display a throbber.
-    //var pTemplate = "Searches Google for <b>${query}</b>";
-    //var pData = {query: searchTerm};
-    //pblock.innerHTML = CmdUtils.renderTemplate(pTemplate, pData);
+    if(searchTerm.length < 1) {
+      pblock.innerHTML = "Searches Google for your words.";
+      return;
+    }
 
     var url = "http://ajax.googleapis.com/ajax/services/search/web";
     var params = { v: "1.0", q: searchTerm };
