--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -66,7 +66,7 @@ extension.
          onkeydown="PrefKeys.onKeyChange(event)" 
          onfocus="this.value = 'Press your combination'"
          onblur="PrefKeys.onLoad()"/><br/>
-  Click above to <strong>Change</strong> your hotkey. <br/></p>
+  Click above to <strong>Change</strong> the key combo used to open Ubiquity. <br/></p>
   <p id="keyNotify"></p>
   </div>
   
