Combined metadata with single CSS file for skins.

--- a/ubiquity/chrome/content/skinlist.html
+++ b/ubiquity/chrome/content/skinlist.html
@@ -11,13 +11,12 @@
 <body>
 <script src="resource://ubiquity-scripts/jquery.js"></script>
 <script src="skinlist.js"></script>
-<script src="cmdlist.js"></script>
+<!-- <script src="cmdlist.js"></script> -->
 <script src="utils.js"></script>
 
 <div class="head">
   <span class="large">Ubiquity:</span> Your skins</span>
 </div>
-
 
 <div id="nav-container">
   <ul id="nav">
@@ -34,6 +33,14 @@
 
 <h1 id="notify"></h1>
 <ul id="skin-list"></ul>
+
+<script>
+
+//alert("hi");
+$(document).ready(onDocumentLoad);
+
+
+</script>
 
 </body>
 </html>
