--- a/ubiquity/chrome/content/test.html
+++ b/ubiquity/chrome/content/test.html
@@ -11,6 +11,7 @@
 <script type="text/javascript;version=1.7" src="cmdmanager.js"></script>
 <script type="text/javascript;version=1.7" src="test_suggestion_memory.js"></script>
 <script type="text/javascript;version=1.7" src="tests.js"></script>
+<script type="text/javascript;version=1.7" src="safebox_tests.js"></script>
 <script type="text/javascript;version=1.7" src="test.js"></script>
 <script type="text/javascript;version=1.7">
 function startTestSuite() {
